// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Checkbox checked 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,background,box-shadow,color,opacity;
  transition-property: border-color,background,box-shadow,color,opacity;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3C64F4;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #3C64F4;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 1;
}

.c5 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  cursor: pointer;
  margin-left: 0.5rem;
}

.c5:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
>
  <input
    aria-labelledby="bd-checkbox_label-2"
    checked=""
    class="c1 c2"
    id="bd-checkbox-1"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="bd-checkbox-1"
  >
    <svg
      aria-labelledby="bd-icon-3"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M9 16.17L5.53 12.7a.996.996 0 10-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 10-1.41-1.41L9 16.17z"
      />
    </svg>
  </label>
  <label
    class="c5"
    for="bd-checkbox-1"
    id="bd-checkbox_label-2"
  >
    Checked
  </label>
</div>
`;

exports[`render Checkbox disabled checked 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1:focus + .c6 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c1:focus + .c7 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,background,box-shadow,color,opacity;
  transition-property: border-color,background,box-shadow,color,opacity;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3C64F4;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
  background: #D9DCE9;
  border-color: #D9DCE9;
  cursor: not-allowed;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 1;
}

.c5 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  cursor: pointer;
  margin-left: 0.5rem;
  cursor: not-allowed;
  color: #B4BAD1;
}

.c5:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
>
  <input
    aria-labelledby="bd-checkbox_label-2"
    checked=""
    class="c1 c2"
    disabled=""
    id="bd-checkbox-1"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for="bd-checkbox-1"
  >
    <svg
      aria-labelledby="bd-icon-3"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M9 16.17L5.53 12.7a.996.996 0 10-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 10-1.41-1.41L9 16.17z"
      />
    </svg>
  </label>
  <label
    aria-hidden="true"
    class="c5"
    disabled=""
    for="bd-checkbox-1"
    id="bd-checkbox_label-2"
  >
    Checked
  </label>
</div>
`;

exports[`render Checkbox disabled indeterminate 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1:focus + .c6 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c1:focus + .c7 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,background,box-shadow,color,opacity;
  transition-property: border-color,background,box-shadow,color,opacity;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3C64F4;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
  background: #D9DCE9;
  border-color: #D9DCE9;
  cursor: not-allowed;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 1;
}

.c1:focus + .c8 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c5 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  cursor: pointer;
  margin-left: 0.5rem;
  cursor: not-allowed;
  color: #B4BAD1;
}

.c5:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
>
  <input
    aria-labelledby="bd-checkbox_label-2"
    class="c1 c2"
    disabled=""
    id="bd-checkbox-1"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for="bd-checkbox-1"
  >
    <svg
      aria-labelledby="bd-icon-3"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M18 13H6c-.55 0-1-.45-1-1s.45-1 1-1h12c.55 0 1 .45 1 1s-.45 1-1 1z"
      />
    </svg>
  </label>
  <label
    aria-hidden="true"
    class="c5"
    disabled=""
    for="bd-checkbox-1"
    id="bd-checkbox_label-2"
  >
    Unchecked
  </label>
</div>
`;

exports[`render Checkbox disabled unchecked 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1:focus + .c6 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c1:focus + .c7 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c1:focus + .c8 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,background,box-shadow,color,opacity;
  transition-property: border-color,background,box-shadow,color,opacity;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
  background: #F6F7FC;
  border-color: #D9DCE9;
  cursor: not-allowed;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 0;
}

.c5 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  cursor: pointer;
  margin-left: 0.5rem;
  cursor: not-allowed;
  color: #B4BAD1;
}

.c5:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
>
  <input
    aria-labelledby="bd-checkbox_label-2"
    class="c1 c2"
    disabled=""
    id="bd-checkbox-1"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    disabled=""
    for="bd-checkbox-1"
  >
    <svg
      aria-labelledby="bd-icon-3"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M9 16.17L5.53 12.7a.996.996 0 10-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 10-1.41-1.41L9 16.17z"
      />
    </svg>
  </label>
  <label
    aria-hidden="true"
    class="c5"
    disabled=""
    for="bd-checkbox-1"
    id="bd-checkbox_label-2"
  >
    Checked
  </label>
</div>
`;

exports[`render Checkbox indeterminate 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c3 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,background,box-shadow,color,opacity;
  transition-property: border-color,background,box-shadow,color,opacity;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #3C64F4;
  border: 1px solid #D9DCE9;
  border-color: #3C64F4;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #3C64F4;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 1;
}

.c1:focus + .c6 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c5 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  cursor: pointer;
  margin-left: 0.5rem;
}

.c5:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
>
  <input
    aria-labelledby="bd-checkbox_label-2"
    class="c1 c2"
    id="bd-checkbox-1"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="bd-checkbox-1"
  >
    <svg
      aria-labelledby="bd-icon-3"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M18 13H6c-.55 0-1-.45-1-1s.45-1 1-1h12c.55 0 1 .45 1 1s-.45 1-1 1z"
      />
    </svg>
  </label>
  <label
    class="c5"
    for="bd-checkbox-1"
    id="bd-checkbox_label-2"
  >
    Unchecked
  </label>
</div>
`;

exports[`render Checkbox unchecked 1`] = `
.c4 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1:focus + .c6 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,background,box-shadow,color,opacity;
  transition-property: border-color,background,box-shadow,color,opacity;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
}

.c3:hover {
  border-color: #B4BAD1;
}

.c1:focus + .c3 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c3 svg {
  opacity: 0;
}

.c5 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
  cursor: pointer;
  margin-left: 0.5rem;
}

.c5:last-child {
  margin-bottom: 0;
}

<div
  class="c0"
>
  <input
    aria-labelledby="bd-checkbox_label-2"
    class="c1 c2"
    id="bd-checkbox-1"
    type="checkbox"
  />
  <label
    aria-hidden="true"
    class="c3"
    for="bd-checkbox-1"
  >
    <svg
      aria-labelledby="bd-icon-3"
      class="c4"
      fill="currentColor"
      height="24"
      stroke="currentColor"
      stroke-width="0"
      viewBox="0 0 24 24"
      width="24"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M9 16.17L5.53 12.7a.996.996 0 10-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 10-1.41-1.41L9 16.17z"
      />
    </svg>
  </label>
  <label
    class="c5"
    for="bd-checkbox-1"
    id="bd-checkbox_label-2"
  >
    Unchecked
  </label>
</div>
`;
